Badges work properly, animated emotes

--- a/src/chat/layout.html
+++ b/src/chat/layout.html
@@ -11,6 +11,7 @@
       color: white;
       text-shadow: 0px 0px 2px black;
       overflow-y: hidden;
+      font-family:Arial, Helvetica, sans-serif;
     }
     ol {
       list-style: none;
