--- a/src/chat/layout.html
+++ b/src/chat/layout.html
@@ -58,6 +58,9 @@
     .emote {
       max-height: 1em;
     }
+    .italics {
+      font-style: italic;
+    }
   </style>
   <script src="/chat/chat_frontend.js"></script>
 </head>
